--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
   },
   "dependencies": {
     "@actions/core": "^1.10.1",
-    "bpmn-to-image": "^0.7.0"
+    "bpmn-to-image": "^0.7.0",
+    "puppeteer": "^22.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
